--- a/sistema_recomendacao_web/render.yaml
+++ b/sistema_recomendacao_web/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: sistema-recomendacao-sapatos
     env: python
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn wsgi:app
     autoDeploy: true
